[gd_scene load_steps=58 format=2]

[ext_resource path="res://1bitplatformerpack/Tilemap/tile_0103.png" type="Texture" id=1]
[ext_resource path="res://kenney_microroguelike_1.2/Tiles/Monochrome/tile_0004.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://tileedge.png" type="Texture" id=4]
[ext_resource path="res://tileleft.png" type="Texture" id=5]
[ext_resource path="res://tileblank.png" type="Texture" id=6]
[ext_resource path="res://tileright.png" type="Texture" id=7]
[ext_resource path="res://tr.png" type="Texture" id=8]
[ext_resource path="res://tl.png" type="Texture" id=9]
[ext_resource path="res://1bitplatformerpack/Tiles/Default/tile_0240.png" type="Texture" id=10]
[ext_resource path="res://Enemy.gd" type="Script" id=11]
[ext_resource path="res://1bitplatformerpack/Tiles/Default/tile_0000.png" type="Texture" id=12]
[ext_resource path="res://1bitplatformerpack/platform middle.png" type="Texture" id=13]
[ext_resource path="res://1bitplatformerpack/platform right.png" type="Texture" id=14]
[ext_resource path="res://1bitplatformerpack/platform left.png" type="Texture" id=15]
[ext_resource path="res://Platforms.gd" type="Script" id=16]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Label.gd" type="Script" id=18]
[ext_resource path="res://tilemap6.png" type="Texture" id=19]
[ext_resource path="res://Water.gd" type="Script" id=20]
[ext_resource path="res://1bitplatformerpack/Tiles/Default/tile_0073.png" type="Texture" id=21]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=22]
[ext_resource path="res://Enemy2.gd" type="Script" id=23]
[ext_resource path="res://1bitplatformerpack/Tiles/Default/tile_0320.png" type="Texture" id=24]
[ext_resource path="res://Boss.gd" type="Script" id=25]
[ext_resource path="res://BossHealthLabel.gd" type="Script" id=26]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=27]
[ext_resource path="res://BulletSpawner.gd" type="Script" id=28]
[ext_resource path="res://tutorial.png" type="Texture" id=29]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=13]
0/name = "tile_0103.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 7 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tile_0103.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tileleft.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileedge.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 9 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tileright.png 4"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 10 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tileblank.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "tl.png 6"
6/texture = ExtResource( 9 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 11 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tr.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "tr.png 8"
8/texture = ExtResource( 8 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 12 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0

[sub_resource type="TileSet" id=14]
0/name = "platform left.png 0"
0/texture = ExtResource( 15 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "platform middle.png 1"
1/texture = ExtResource( 13 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "platform right.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 256, 32 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 128, 32 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 96, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=22]
0/name = "tilemap6.png 0"
0/texture = ExtResource( 19 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 21 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tilemap6.png 1"
1/texture = ExtResource( 19 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 128, 24 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 128, 32 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 32, 224 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 24, 248 )

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 17 )

[node name="Main" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -512, -16 )
script = ExtResource( 3 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true

[node name="Label" type="Label" parent="Player/PlayerCamera"]
margin_left = -480.0
margin_top = -272.0
margin_right = -440.0
margin_bottom = -258.0
custom_fonts/font = SubResource( 1 )
text = "Lives:"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealthLabel" type="Label" parent="Player/PlayerCamera"]
margin_left = -216.0
margin_top = -280.0
margin_right = 216.0
margin_bottom = -146.0
custom_fonts/font = SubResource( 2 )
text = "Boss Health
1"
align = 1
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="Player"]
position = Vector2( 32, -32 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="PlayerArea" type="Area2D" parent="Player"]
position = Vector2( 32, -32 )

[node name="AreaCollision" type="CollisionShape2D" parent="Player/PlayerArea"]
shape = SubResource( 3 )

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
position = Vector2( 32, -32 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Player"]
wait_time = 1.5
autostart = true

[node name="Weapon" type="Node2D" parent="Player"]

[node name="WeaponSprite" type="Sprite" parent="Player/Weapon"]
position = Vector2( 88, -32 )
scale = Vector2( 3.625, 0.75 )
texture = ExtResource( 12 )

[node name="WeaponArea" type="Area2D" parent="Player/Weapon"]

[node name="WeaponCollision" type="CollisionShape2D" parent="Player/Weapon/WeaponArea"]
position = Vector2( 96, -32 )
shape = SubResource( 5 )

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( -96, -32 )
script = ExtResource( 11 )

[node name="EnemySprite" type="Sprite" parent="Enemy"]
position = Vector2( 1.90735e-06, -1.90735e-06 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="EnemyArea" type="Area2D" parent="Enemy"]

[node name="EnemyCollision" type="CollisionShape2D" parent="Enemy/EnemyArea"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="Enemy"]
autostart = true

[node name="MainGround" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 13 )
format = 1
tile_data = PoolIntArray( -262161, 5, 0, -262160, 5, 0, -262159, 5, 0, -262158, 5, 0, -262157, 5, 0, -262156, 5, 0, -262155, 5, 0, -262154, 2, 0, -196625, 5, 0, -196624, 5, 0, -196623, 5, 0, -196622, 5, 0, -196621, 5, 0, -196620, 5, 0, -196619, 5, 0, -196618, 2, 0, -131089, 5, 0, -131088, 5, 0, -131087, 5, 0, -131086, 5, 0, -131085, 5, 0, -131084, 5, 0, -131083, 5, 0, -131082, 2, 0, -65553, 5, 0, -65552, 5, 0, -65551, 5, 0, -65550, 5, 0, -65549, 5, 0, -65548, 5, 0, -65547, 5, 0, -65546, 2, 0, -131068, 6, 0, -131067, 0, 0, -131066, 8, 0, -17, 5, 0, -16, 5, 0, -15, 5, 0, -14, 5, 0, -13, 5, 0, -12, 5, 0, -11, 5, 0, -10, 2, 0, -65532, 4, 0, -65530, 2, 0, 65519, 5, 0, 65520, 5, 0, 65521, 5, 0, 65522, 5, 0, 65523, 5, 0, 65524, 5, 0, 65525, 5, 0, 65526, 3, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 131055, 5, 0, 131056, 5, 0, 131057, 5, 0, 131058, 5, 0, 131059, 5, 0, 131060, 5, 0, 131061, 5, 0, 131062, 5, 0, 131063, 5, 0, 131064, 5, 0, 131065, 5, 0, 131066, 5, 0, 131067, 5, 0, 131068, 5, 0, 131069, 5, 0, 131070, 5, 0, 131071, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 65556, 5, 0, 65557, 5, 0, 65558, 5, 0, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 5, 0, 65563, 5, 0, 65564, 5, 0, 65565, 5, 0, 65566, 5, 0, 65567, 5, 0, 65568, 5, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 5, 0, 65573, 5, 0, 65574, 5, 0, 65575, 5, 0, 65576, 5, 0, 65577, 5, 0, 65578, 5, 0, 65579, 5, 0, 65580, 5, 0, 65581, 5, 0, 65582, 5, 0, 65583, 5, 0, 65584, 5, 0, 65585, 5, 0, 65586, 5, 0, 65587, 5, 0, 65588, 5, 0, 65589, 5, 0, 65590, 5, 0, 65591, 5, 0, 65592, 5, 0, 65593, 5, 0, 65594, 5, 0, 65595, 5, 0, 65596, 5, 0, 65597, 5, 0, 65598, 5, 0, 65599, 5, 0, 65600, 5, 0, 65601, 5, 0, 65602, 5, 0, 65603, 5, 0, 65604, 5, 0, 65605, 5, 0, 65606, 5, 0, 65607, 5, 0, 65608, 5, 0, 196591, 5, 0, 196592, 5, 0, 196593, 5, 0, 196594, 5, 0, 196595, 5, 0, 196596, 5, 0, 196597, 5, 0, 196598, 5, 0, 196599, 5, 0, 196600, 5, 0, 196601, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 5, 0, 196605, 5, 0, 196606, 5, 0, 196607, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 0, 131096, 5, 0, 131097, 5, 0, 131098, 5, 0, 131099, 5, 0, 131100, 5, 0, 131101, 5, 0, 131102, 5, 0, 131103, 5, 0, 131104, 5, 0, 131105, 5, 0, 131106, 5, 0, 131107, 5, 0, 131108, 5, 0, 131109, 5, 0, 131110, 5, 0, 131111, 5, 0, 131112, 5, 0, 131113, 5, 0, 131114, 5, 0, 131115, 5, 0, 131116, 5, 0, 131117, 5, 0, 131118, 5, 0, 131119, 5, 0, 131120, 5, 0, 131121, 5, 0, 131122, 5, 0, 131123, 5, 0, 131124, 5, 0, 131125, 5, 0, 131126, 5, 0, 131127, 5, 0, 131128, 5, 0, 131129, 5, 0, 131130, 5, 0, 131131, 5, 0, 131132, 5, 0, 131133, 5, 0, 131134, 5, 0, 131135, 5, 0, 131136, 5, 0, 131137, 5, 0, 131138, 5, 0, 131139, 5, 0, 131140, 5, 0, 131141, 5, 0, 131142, 5, 0, 131143, 5, 0, 131144, 5, 0, 262127, 5, 0, 262128, 5, 0, 262129, 5, 0, 262130, 5, 0, 262131, 5, 0, 262132, 5, 0, 262133, 5, 0, 262134, 5, 0, 262135, 5, 0, 262136, 5, 0, 262137, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 5, 0, 262143, 5, 0, 196608, 5, 0, 196609, 5, 0, 196610, 5, 0, 196611, 5, 0, 196612, 5, 0, 196613, 5, 0, 196614, 5, 0, 196615, 5, 0, 196616, 5, 0, 196617, 5, 0, 196618, 5, 0, 196619, 5, 0, 196620, 5, 0, 196621, 5, 0, 196622, 5, 0, 196623, 5, 0, 196624, 5, 0, 196625, 5, 0, 196626, 5, 0, 196627, 5, 0, 196628, 5, 0, 196629, 5, 0, 196630, 5, 0, 196631, 5, 0, 196632, 5, 0, 196633, 5, 0, 196634, 5, 0, 196635, 5, 0, 196636, 5, 0, 196637, 5, 0, 196638, 5, 0, 196639, 5, 0, 196640, 5, 0, 196641, 5, 0, 196642, 5, 0, 196643, 5, 0, 196644, 5, 0, 196645, 5, 0, 196646, 5, 0, 196647, 5, 0, 196648, 5, 0, 196649, 5, 0, 196650, 5, 0, 196651, 5, 0, 196652, 5, 0, 196653, 5, 0, 196654, 5, 0, 196655, 5, 0, 196656, 5, 0, 196657, 5, 0, 196658, 5, 0, 196659, 5, 0, 196660, 5, 0, 196661, 5, 0, 196662, 5, 0, 196663, 5, 0, 196664, 5, 0, 196665, 5, 0, 196666, 5, 0, 196667, 5, 0, 196668, 5, 0, 196669, 5, 0, 196670, 5, 0, 196671, 5, 0, 196672, 5, 0, 196673, 5, 0, 196674, 5, 0, 196675, 5, 0, 196676, 5, 0, 196677, 5, 0, 196678, 5, 0, 196679, 5, 0, 196680, 5, 0, 327663, 5, 0, 327664, 5, 0, 327665, 5, 0, 327666, 5, 0, 327667, 5, 0, 327668, 5, 0, 327669, 5, 0, 327670, 5, 0, 327671, 5, 0, 327672, 5, 0, 327673, 5, 0, 327674, 5, 0, 327675, 5, 0, 327676, 5, 0, 327677, 5, 0, 327678, 5, 0, 327679, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 5, 0, 262152, 5, 0, 262153, 5, 0, 262154, 5, 0, 262155, 5, 0, 262156, 5, 0, 262157, 5, 0, 262158, 5, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 262169, 5, 0, 262170, 5, 0, 262171, 5, 0, 262172, 5, 0, 262173, 5, 0, 262174, 5, 0, 262175, 5, 0, 262176, 5, 0, 262177, 5, 0, 262178, 5, 0, 262179, 5, 0, 262180, 5, 0, 262181, 5, 0, 262182, 5, 0, 262183, 5, 0, 262184, 5, 0, 262185, 5, 0, 262186, 5, 0, 262187, 5, 0, 262188, 5, 0, 262189, 5, 0, 262190, 5, 0, 262191, 5, 0, 262192, 5, 0, 262193, 5, 0, 262194, 5, 0, 262195, 5, 0, 262196, 5, 0, 262197, 5, 0, 262198, 5, 0, 262199, 5, 0, 262200, 5, 0, 262201, 5, 0, 262202, 5, 0, 262203, 5, 0, 262204, 5, 0, 262205, 5, 0, 262206, 5, 0, 262207, 5, 0, 262208, 5, 0, 262209, 5, 0, 262210, 5, 0, 262211, 5, 0, 262212, 5, 0, 262213, 5, 0, 262214, 5, 0, 262215, 5, 0, 262216, 5, 0 )

[node name="Platforms" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 14 )
format = 1
tile_data = PoolIntArray( -262124, 0, 0, -262123, 1, 0, -262122, 1, 0, -262121, 2, 0, -262094, 0, 0, -262093, 1, 0, -262092, 2, 0, -131063, 0, 0, -131062, 2, 0, -131054, 0, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 2, 0, -131024, 0, 0, -131023, 2, 0, -131019, 0, 0, -131018, 2, 0 )
script = ExtResource( 16 )

[node name="StaticBody2D" type="StaticBody2D" parent="Platforms"]

[node name="Platform1" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 640, -96 )
shape = SubResource( 15 )
one_way_collision = true

[node name="Platform2" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 1408, -96 )
shape = SubResource( 16 )
one_way_collision = true

[node name="Platform3" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 1408, -224 )
shape = SubResource( 17 )
one_way_collision = true

[node name="Platform4" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 3456, -96 )
shape = SubResource( 18 )
one_way_collision = true

[node name="Platform5" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 3136, -96 )
shape = SubResource( 19 )
one_way_collision = true

[node name="Platform6" type="CollisionShape2D" parent="Platforms/StaticBody2D"]
position = Vector2( 3296, -224 )
shape = SubResource( 20 )
one_way_collision = true

[node name="Timer" type="Timer" parent="Platforms"]
wait_time = 0.2
autostart = true

[node name="Water" type="TileMap" parent="."]
tile_set = SubResource( 22 )
format = 1
tile_data = PoolIntArray( 33, 1, 0, 34, 1, 0, 35, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0 )
script = ExtResource( 20 )

[node name="Area2D" type="Area2D" parent="Water"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/Area2D"]
position = Vector2( 2176, 32 )
shape = SubResource( 23 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Water/Area2D"]
position = Vector2( 3304, 40 )
shape = SubResource( 24 )

[node name="End" type="Node2D" parent="."]
position = Vector2( 4000, -24 )

[node name="Sprite" type="Sprite" parent="End"]
position = Vector2( 3.05176e-05, -8 )
scale = Vector2( 4, 4 )
texture = ExtResource( 21 )

[node name="EndArea" type="Area2D" parent="End"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="End/EndArea"]
position = Vector2( 0, -200 )
shape = SubResource( 25 )

[node name="GameOver" parent="." instance=ExtResource( 22 )]
position = Vector2( 400, 680 )

[node name="Enemy2" type="Node2D" parent="."]
position = Vector2( 1312, -160 )
script = ExtResource( 23 )

[node name="EnemySprite" type="Sprite" parent="Enemy2"]
position = Vector2( 1.90735e-06, -1.90735e-06 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="Enemy2Area" type="Area2D" parent="Enemy2"]

[node name="EnemyCollision" type="CollisionShape2D" parent="Enemy2/Enemy2Area"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="Enemy2"]
autostart = true

[node name="Boss" type="Node2D" parent="."]
position = Vector2( 3712, -64 )
script = ExtResource( 25 )

[node name="BossSprite" type="Sprite" parent="Boss"]
position = Vector2( -3.05176e-05, 0 )
scale = Vector2( 8, 8 )
texture = ExtResource( 24 )

[node name="BossArea" type="Area2D" parent="Boss"]

[node name="BossCollision" type="CollisionShape2D" parent="Boss/BossArea"]
shape = SubResource( 26 )

[node name="Timer" type="Timer" parent="Boss"]

[node name="BulletSpawner" type="Node2D" parent="Boss"]
position = Vector2( -144, 0 )
script = ExtResource( 28 )
_bullet_scene = ExtResource( 27 )

[node name="Timer" type="Timer" parent="Boss/BulletSpawner"]

[node name="BossTrigger" type="Node2D" parent="."]

[node name="BossTriggerArea" type="Area2D" parent="BossTrigger"]

[node name="BossTriggerCollision" type="CollisionShape2D" parent="BossTrigger/BossTriggerArea"]
position = Vector2( 2848, -208 )
shape = SubResource( 27 )

[node name="Tutorial" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -289.5, -161.25 )
scale = Vector2( 0.942997, 0.74356 )
texture = ExtResource( 29 )

[node name="Label" type="Label" parent="."]
margin_left = -376.0
margin_top = -192.0
margin_right = -281.0
margin_bottom = -74.0
custom_fonts/font = SubResource( 28 )
text = "WASD / Space to Move
J to Attack
K to Dash
S to fall through Platforms"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="boss_start" from="Player" to="Boss/BulletSpawner" method="_on_Player_boss_start"]
[connection signal="boss_start" from="Player" to="Boss" method="_on_Player_boss_start"]
[connection signal="platform" from="Player" to="Platforms" method="_on_Player_platform"]
[connection signal="boss_death" from="Player/PlayerCamera/BossHealthLabel" to="Boss" method="_on_BossHealthLabel_boss_death"]
[connection signal="area_entered" from="Player/PlayerArea" to="Water" method="_on_PlayerArea_area_entered"]
[connection signal="area_entered" from="Player/PlayerArea" to="Boss/BulletSpawner" method="_on_PlayerArea_area_entered"]
[connection signal="area_entered" from="Player/PlayerArea" to="Enemy" method="_on_PlayerArea_area_entered"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="hide" from="Player/Weapon/WeaponSprite" to="Player" method="_on_WeaponSprite_hide"]
[connection signal="ready" from="Player/Weapon/WeaponSprite" to="Player" method="_on_WeaponSprite_ready"]
[connection signal="area_entered" from="Player/Weapon/WeaponArea" to="Enemy2" method="_on_WeaponArea_area_entered"]
[connection signal="area_entered" from="Player/Weapon/WeaponArea" to="Enemy" method="_on_WeaponArea_area_entered"]
[connection signal="area_entered" from="Player/Weapon/WeaponArea" to="Boss" method="_on_WeaponArea_area_entered"]
[connection signal="ready" from="Player/Weapon/WeaponArea/WeaponCollision" to="Player" method="_on_WeaponCollision_ready"]
[connection signal="area_entered" from="Enemy/EnemyArea" to="Player" method="_on_EnemyArea_area_entered"]
[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="timeout" from="Platforms/Timer" to="Platforms" method="_on_Timer_timeout"]
[connection signal="area_entered" from="Water/Area2D" to="Player" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="End/EndArea" to="Player" method="_on_EndArea_area_entered"]
[connection signal="area_entered" from="End/EndArea" to="Player" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Enemy2/Enemy2Area" to="Player" method="_on_EnemyArea_area_entered"]
[connection signal="area_entered" from="Enemy2/Enemy2Area" to="Player" method="_on_Enemy2Area_area_entered"]
[connection signal="timeout" from="Enemy2/Timer" to="Enemy2" method="_on_Timer_timeout"]
[connection signal="boss_damage" from="Boss" to="Player/PlayerCamera/BossHealthLabel" method="_on_Boss_boss_damage"]
[connection signal="area_entered" from="Boss/BossArea" to="Player" method="_on_BossArea_area_entered"]
[connection signal="timeout" from="Boss/Timer" to="Boss" method="_on_Timer_timeout"]
[connection signal="timeout" from="Boss/BulletSpawner/Timer" to="Boss/BulletSpawner" method="_on_Timer_timeout"]
[connection signal="area_entered" from="BossTrigger/BossTriggerArea" to="Player/PlayerCamera/BossHealthLabel" method="_on_BossTriggerArea_area_entered"]
[connection signal="area_entered" from="BossTrigger/BossTriggerArea" to="Player" method="_on_BossTriggerArea_area_entered"]
